# express-scion-router

./: .gitignore  CMakeLists.txt  README.md
docs/: design.md  sample_topology.yaml
go/xsr/: CMakeLists.txt  go.mod  go.sum  router.go  xsr.go
go/xsr/af_xdp/: af_xdp_conn.go  af_xdp_msg.go
go/xsr/bpf/: bpf_kernel.go  bpf_user.go  control.go
go/xsr/config/: config.go
go/xsr/topology/: topology.go
src/: CMakeLists.txt
src/bpf/: aes.c  aes_wrapper.c  debug.h  fib_lookup.h  map_limits.h  maps.h  parser.h  path_processing.h  rewrite.h  scion.h  xdp.c
src/common/: aes.h  definitions.h
src/test/: test.c
src/user/: aes_hw_accel.c  aes_hw_accel.h  userspace_bpf_maps.h
